<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PitchSettingsActivity">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pitch_matching"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/descText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:alpha=".8"
        android:fontFamily="@font/quicksand"
        android:text="@string/pitch_matching_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />


    <TextView
        android:id="@+id/numTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha=".8"
        android:fontFamily="@font/quicksand"
        android:text="@string/numberOfNotes"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descText" />
    <View
        android:id="@+id/numDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numTitle" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/short_off"
        android:contentDescription="@string/Short"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/numNotesText"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numDivider" />
    <ImageButton
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:background="@drawable/medium_on"
        android:contentDescription="@string/medium"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/numNotesText"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/numDivider" />
    <ImageButton
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/long_off"
        android:contentDescription="@string/Long"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/numNotesText"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/numDivider" />

    <TextView
        android:id="@+id/numNotesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha=".8"
        android:fontFamily="@font/quicksand"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/difficultyTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/difficultyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:alpha=".8"
        android:fontFamily="@font/quicksand"
        android:text="@string/difficulty"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numDivider" />
    <View
        android:id="@+id/difficultyDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTitle" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/easy_off"
        android:contentDescription="@string/easy"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/difficultyText"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyDivider" />
    <ImageButton
        android:id="@+id/button5"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:background="@drawable/medium_on"
        android:contentDescription="@string/medium"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/difficultyText"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/difficultyDivider" />
    <ImageButton
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/hard_off"
        android:contentDescription="@string/hard"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/difficultyText"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/difficultyDivider" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha=".8"
        android:fontFamily="@font/quicksand"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/noteNamesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/noteNamesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:alpha=".8"
        android:fontFamily="@font/quicksand"
        android:text="@string/note_names"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyDivider" />
    <View
        android:id="@+id/noteNamesDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteNamesTitle" />

    <TextView
        android:id="@+id/showTargetNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:alpha=".8"
        android:fontFamily="@font/quicksand"
        android:text="@string/show_note"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteNamesDivider" />

    <Switch
        android:id="@+id/targetNoteToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteNamesDivider" />

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/start"
        android:contentDescription="@string/start"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>